# mozaiko

./: .coverage  .coveragerc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  DIA-COPY-TEST.ipynb  Makefile  README.md  conda_env_setup.sh  data-fasta.csv  draft.ipynb  environment.yml  example_config_run.json  fasta-taxa-dict.json  germany_otl_processed.tsv  meta.yaml  mosaiko  multibarcode-pre-process.ipynb  mypy.ini  null_results.csv  otl-dict_otl_counts.json  otl-hierarchy.json  patch_crabs.sh  pipeline.ipynb  pipeline_bmi.ipynb  pipeline_dia.ipynb  primerex.csv  pyproject.toml  requirements.txt  setup.py  test_input.fasta  workflow_bmi.py  workflow_dia.py
.github/workflows/: python-test-check.yml  super-linter.yml  test-bash.yml  test-conda-env.yml  test-conda-setup.yml
data/: README.md
data/input_data/: .~lock.france_taxonlist.tsv#  (+10 more)
external_scripts/: .~lock.bold-selected-highest_tax_harmonized.tsv#  bold-data-package.ipynb  bold_database.ipynb  idm-filtered-complete.txt  no_gbif_hit_taxa.txt  pga_comparison_results.ipynb  pipeline.ipynb  tax_harmonize.py  unique_idm_normalization.tsv
previous_software/: AllPrimers_gene.txt  README.md  nsdpy_to_blast.py  taxonomy.txt  testecuadapt_v3.py
src/: data_transformer.py  database.py  draft.ipynb  fasta_handler.py  mosaiko.py  mozaiko.py  pre_processor.py  processed_input_fasta.csv
tests/: test_amplification.py  test_custom_fasta_import.py  test_db_curation.py  test_fasta_handler.py  test_input_files.py  test_metrics_system.py  test_mosaiko.py  test_mozaiko.py  test_scoring_utils.py  test_setup.py
(+92 files in other folders)
